--- a/js/package.json
+++ b/js/package.json
@@ -21,7 +21,8 @@
     "deploy": "run-s deploy:docs build deploy:apps && gh-pages -d docs",
     "deploy:docs": "lerna run docs",
     "deploy:apps": "lerna run deploy:app",
-    "test": "lerna run test --concurrency 1 --stream"
+    "test": "lerna run test --concurrency 1 --stream",
+    "deploy:netlify": "yarn install && yarn bootstrap && yarn start"
   },
   "lint-staged": {
     "packages/*/{src,test}/**/*.ts": [
